run.log
[I 150417 19:20:49 web:1825] 200 GET /3000words (192.168.56.20) 277.80ms
[I 150417 19:20:56 web:1825] 200 POST /3000words (192.168.56.20) 261.91ms
[I 150417 19:20:56 web:1825] 200 GET /3000words (192.168.56.20) 33.23ms
[I 150417 19:20:58 web:1825] 200 POST /3000words (192.168.56.20) 83.73ms
[I 150417 19:20:58 web:1825] 200 GET /3000words (192.168.56.20) 18.41ms
[I 150417 19:21:02 web:1825] 200 POST /3000words (192.168.56.20) 29.42ms
[I 150417 19:21:02 web:1825] 200 GET /3000words (192.168.56.20) 31.21ms
[I 150417 19:21:05 web:1825] 200 POST /3000words (192.168.56.20) 17.44ms
[I 150417 19:21:05 web:1825] 200 GET /3000words (192.168.56.20) 31.40ms
[I 150417 19:21:09 web:1825] 200 POST /3000words (192.168.56.20) 40.09ms
[I 150417 19:21:09 web:1825] 200 GET /3000words (192.168.56.20) 6.70ms
[I 150417 19:23:23 web:1825] 200 POST /3000words (192.168.56.20) 92.17ms
[I 150417 19:23:23 web:1825] 200 GET /3000words (192.168.56.20) 19.42ms
[I 150417 19:23:39 web:1825] 200 POST /3000words (192.168.56.20) 46.60ms
[I 150417 19:23:39 web:1825] 200 GET /3000words (192.168.56.20) 6.16ms
[I 150417 19:23:47 web:1825] 200 POST /3000words (192.168.56.20) 63.35ms
[I 150417 19:23:47 web:1825] 200 GET /3000words (192.168.56.20) 13.57ms
[I 150417 23:08:34 web:1825] 200 GET /3000words (192.168.56.20) 13.18ms
[I 150418 00:56:05 web:1825] 200 GET /3000words (192.168.56.20) 14.82ms
[I 150418 00:56:09 web:1825] 200 POST /3000words (192.168.56.20) 78.04ms
[I 150418 00:56:09 web:1825] 200 GET /3000words (192.168.56.20) 8.23ms
[I 150418 00:56:12 web:1825] 200 POST /3000words (192.168.56.20) 117.15ms
[I 150418 00:56:12 web:1825] 200 GET /3000words (192.168.56.20) 11.46ms
[I 150418 00:56:15 web:1825] 200 POST /3000words (192.168.56.20) 92.59ms
[I 150418 00:56:15 web:1825] 200 GET /3000words (192.168.56.20) 22.04ms
[I 150418 00:56:17 web:1825] 200 POST /3000words (192.168.56.20) 86.66ms
[I 150418 00:56:17 web:1825] 200 GET /3000words (192.168.56.20) 7.62ms
[I 150418 00:56:19 web:1825] 200 POST /3000words (192.168.56.20) 51.05ms
[I 150418 00:56:19 web:1825] 200 GET /3000words (192.168.56.20) 6.61ms
[I 150418 00:56:30 web:1825] 200 POST /3000words (192.168.56.20) 21.60ms
[I 150418 00:56:30 web:1825] 200 GET /3000words (192.168.56.20) 13.98ms
[I 150418 00:56:32 web:1825] 200 POST /3000words (192.168.56.20) 93.36ms
[I 150418 00:56:32 web:1825] 200 GET /3000words (192.168.56.20) 12.38ms
[I 150418 00:56:35 web:1825] 200 POST /3000words (192.168.56.20) 32.78ms
[I 150418 00:56:35 web:1825] 200 GET /3000words (192.168.56.20) 15.74ms
[I 150418 00:56:38 web:1825] 200 POST /3000words (192.168.56.20) 41.88ms
[I 150418 00:56:38 web:1825] 200 GET /3000words (192.168.56.20) 10.55ms
[I 150418 00:56:45 web:1825] 200 POST /3000words (192.168.56.20) 34.91ms
[I 150418 00:56:45 web:1825] 200 GET /3000words (192.168.56.20) 15.70ms
[I 150418 00:56:47 web:1825] 200 POST /3000words (192.168.56.20) 41.80ms
[I 150418 00:56:47 web:1825] 200 GET /3000words (192.168.56.20) 6.82ms
[I 150418 00:56:50 web:1825] 200 POST /3000words (192.168.56.20) 57.90ms
[I 150418 00:56:50 web:1825] 200 GET /3000words (192.168.56.20) 11.40ms
[I 150418 00:56:52 web:1825] 200 POST /3000words (192.168.56.20) 37.81ms
[I 150418 00:56:52 web:1825] 200 GET /3000words (192.168.56.20) 17.61ms
[I 150418 00:56:53 web:1825] 200 POST /3000words (192.168.56.20) 17.74ms
[I 150418 00:56:53 web:1825] 200 GET /3000words (192.168.56.20) 9.12ms
[I 150418 00:56:55 web:1825] 200 POST /3000words (192.168.56.20) 14.92ms
[I 150418 00:56:55 web:1825] 200 GET /3000words (192.168.56.20) 5.91ms
[I 150418 00:56:58 web:1825] 200 POST /3000words (192.168.56.20) 39.59ms
[I 150418 00:56:58 web:1825] 200 GET /3000words (192.168.56.20) 7.93ms
[I 150418 00:57:00 web:1825] 200 POST /3000words (192.168.56.20) 32.36ms
[I 150418 00:57:00 web:1825] 200 GET /3000words (192.168.56.20) 21.72ms
[I 150418 00:57:03 web:1825] 200 POST /3000words (192.168.56.20) 26.44ms
[I 150418 00:57:03 web:1825] 200 GET /3000words (192.168.56.20) 22.16ms
[I 150418 00:57:05 web:1825] 200 POST /3000words (192.168.56.20) 32.03ms
[I 150418 00:57:05 web:1825] 200 GET /3000words (192.168.56.20) 15.42ms
[I 150418 00:57:08 web:1825] 200 POST /3000words (192.168.56.20) 38.59ms
[I 150418 00:57:08 web:1825] 200 GET /3000words (192.168.56.20) 17.56ms
[I 150418 00:57:15 web:1825] 200 POST /3000words (192.168.56.20) 23.77ms
[I 150418 00:57:15 web:1825] 200 GET /3000words (192.168.56.20) 16.59ms
[I 150418 00:57:18 web:1825] 200 POST /3000words (192.168.56.20) 46.32ms
[I 150418 00:57:18 web:1825] 200 GET /3000words (192.168.56.20) 12.14ms
[I 150418 00:57:25 web:1825] 200 POST /3000words (192.168.56.20) 37.30ms
[I 150418 00:57:25 web:1825] 200 GET /3000words (192.168.56.20) 10.46ms
[I 150418 00:57:43 web:1825] 200 POST /3000words (192.168.56.20) 63.56ms
[I 150418 00:57:43 web:1825] 200 GET /3000words (192.168.56.20) 15.61ms
[I 150418 00:57:53 web:1825] 200 POST /3000words (192.168.56.20) 17.70ms
[I 150418 00:57:53 web:1825] 200 GET /3000words (192.168.56.20) 14.70ms
[I 150418 00:57:58 web:1825] 200 POST /3000words (192.168.56.20) 61.30ms
[I 150418 00:57:58 web:1825] 200 GET /3000words (192.168.56.20) 18.74ms
[I 150418 01:07:53 autoreload:195] /home/conda/GRE3000words/main.py modified; restarting server
[I 150418 01:08:26 web:1825] 200 POST /3000words (192.168.56.20) 97.06ms
[I 150418 01:08:26 web:1825] 200 GET /3000words (192.168.56.20) 10.48ms
[I 150418 01:10:07 autoreload:195] /home/conda/GRE3000words/main.py modified; restarting server
[I 150418 01:10:36 autoreload:195] /home/conda/GRE3000words/main.py modified; restarting server
[E 150418 01:11:18 web:1421] Uncaught exception POST /3000words (192.168.56.20)
    HTTPServerRequest(protocol='http', host='192.168.56.101:8000', method='POST', uri='/3000words', version='HTTP/1.1', remote_ip='192.168.56.20', headers={'Origin': 'http://192.168.56.101:8000', 'Content-Length': '6', 'Accept-Language': 'en-US,en;q=0.8', 'Accept-Encoding': 'gzip, deflate', 'Host': '192.168.56.101:8000', 'Accept': '*/*', 'User-Agent': 'Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.90 Safari/537.36', 'Connection': 'keep-alive', 'X-Requested-With': 'XMLHttpRequest', 'Referer': 'http://192.168.56.101:8000/3000words', 'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8'})
    Traceback (most recent call last):
      File "/usr/lib64/python2.7/site-packages/tornado-4.1-py2.7-linux-x86_64.egg/tornado/web.py", line 1346, in _execute
        result = method(*self.path_args, **self.path_kwargs)
      File "/home/conda/GRE3000words/main.py", line 71, in post
        self.get()
      File "/home/conda/GRE3000words/main.py", line 24, in get
        cursor.execute("SELECT * FROM record ORDER BY id DESC LIMIT 1 where user='%s';" % (user))
      File "/usr/lib64/python2.7/site-packages/MySQLdb/cursors.py", line 174, in execute
        self.errorhandler(self, exc, value)
      File "/usr/lib64/python2.7/site-packages/MySQLdb/connections.py", line 36, in defaulterrorhandler
        raise errorclass, errorvalue
    ProgrammingError: (1064, "You have an error in your SQL syntax; check the manual that corresponds to your MariaDB server version for the right syntax to use near 'where user='kehao.wu@gmail.com'' at line 1")
[E 150418 01:11:18 web:1825] 500 POST /3000words (192.168.56.20) 83.23ms
[E 150418 01:11:18 web:1421] Uncaught exception GET /3000words (192.168.56.20)
    HTTPServerRequest(protocol='http', host='192.168.56.101:8000', method='GET', uri='/3000words', version='HTTP/1.1', remote_ip='192.168.56.20', headers={'Connection': 'keep-alive', 'Accept-Language': 'en-US,en;q=0.8', 'Accept-Encoding': 'gzip, deflate, sdch', 'Referer': 'http://192.168.56.101:8000/3000words', 'Host': '192.168.56.101:8000', 'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8', 'User-Agent': 'Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.90 Safari/537.36'})
    Traceback (most recent call last):
      File "/usr/lib64/python2.7/site-packages/tornado-4.1-py2.7-linux-x86_64.egg/tornado/web.py", line 1346, in _execute
        result = method(*self.path_args, **self.path_kwargs)
      File "/home/conda/GRE3000words/main.py", line 24, in get
        cursor.execute("SELECT * FROM record ORDER BY id DESC LIMIT 1 where user='%s';" % (user))
      File "/usr/lib64/python2.7/site-packages/MySQLdb/cursors.py", line 174, in execute
        self.errorhandler(self, exc, value)
      File "/usr/lib64/python2.7/site-packages/MySQLdb/connections.py", line 36, in defaulterrorhandler
        raise errorclass, errorvalue
    ProgrammingError: (1064, "You have an error in your SQL syntax; check the manual that corresponds to your MariaDB server version for the right syntax to use near 'where user='kehao.wu@gmail.com'' at line 1")
[E 150418 01:11:18 web:1825] 500 GET /3000words (192.168.56.20) 2.28ms
[I 150418 01:11:18 web:1825] 200 GET /favicon.ico (192.168.56.20) 2.67ms
[I 150418 01:16:06 autoreload:195] /home/conda/GRE3000words/main.py modified; restarting server
[I 150418 01:18:18 autoreload:195] /home/conda/GRE3000words/main.py modified; restarting server
  File "/home/conda/GRE3000words/main.py", line 67
    cursor.execute("SELECT * FROM record WHERE user='%s' ORDER BY id DESC LIMIT 1 ;" % (user))
    ^
IndentationError: unexpected indent
